14795
Enum.java
{code}
public enum Enum {
  VALUE;
}
{code}

Ann.java
{code}
public @interface Ann {
  Enum value();
}
{code}

Use.scala
{code}
class Use {
  @Ann(Enum.VALUE)
  def foo {}
}
{code}

Compiling them together with scalac gives:
{code}
lamppc11:sandbox luc$$ ../build/pack/bin/scalac Enum.java Ann.java Use.scala 
Use.scala:2: error: annotation argument needs to be a constant; found: Enum.VALUE
  @Ann(Enum.VALUE)
            ^
one error found
{code}

Compiling java first, then scala works.

The same issue arises for static constants in Java source files.

https://lampsvn.epfl.ch/trac/scala/ticket/2764#comment:12
